--- a/app/views/admin/collections/index.html.erb
+++ b/app/views/admin/collections/index.html.erb
@@ -20,7 +20,7 @@
     <div class="mt-8 px-4 sm:px-6 lg:px-8">
       <%= render 'admin/shared/paging', records: @collections, url_method: -> (**params){ admin_collections_path(**params) }, paging_params: { group_id: @group&.id } %>
 
-      <div class="mt-8 flow-root">
+      <div class="flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
           <div class="inline-block min-w-full py-2 align-middle">
             <%= form_for @search, url: admin_collections_path, method: :get do |form| %>
@@ -48,9 +48,10 @@
                                       { input_type: :submit, classes: 'py-1 text-left text-sm text-gray-500' }] %>
                 </thead>
                 <tbody>
-                  <% @collections.each do |collection| %>
+                  <% @collections.each_with_index do |collection, index| %>
                     <%= render 'admin/shared/table/row',
                                record: collection,
+                               index: index,
                                columns: [{ type: :text, name: :id, classes: 'font-medium text-gray-900' },
                                          { type: :link, name: :supergroup_name_ka, url_method: -> (**params){ admin_groups_path }, url_params: { supergroup_id: collection.supergroup_id }, classes: "max-w-[240px] overflow-hidden text-gray-500" },
                                          { type: :link, name: :group_name_ka, url_method: -> (**params){ admin_collections_path }, url_params: { group_id: collection.group_id }, classes: "max-w-[240px] overflow-hidden text-gray-500" },
