--- a/app/views/admin/shared/_new_button.html.erb
+++ b/app/views/admin/shared/_new_button.html.erb
@@ -3,7 +3,7 @@
     <%= link_to name,
                 url,
                 type: "button",
-                class: "block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
+                class: "block rounded-md bg-skyblue-500 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-skyblue-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-skyblue-500" %>
     <!-- <button type="button" class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add user</button> -->
   </div>
 </div>
