Fix search with parent id

--- a/app/views/admin/groups/index.html.erb
+++ b/app/views/admin/groups/index.html.erb
@@ -40,6 +40,7 @@
                               form: form,
                               columns: [{ name: :id, classes: 'max-w-[60px]', input_type: :text_field, input_classes: 'px-2' },
                                         { name: :supergroup_name_ka, classes: 'max-w-[240px]', input_type: :text_field },
+                                        { name: :supergroup_id, input_type: :hidden },
                                         { name: :name_ka, classes: 'max-w-[240px]', input_type: :text_field },
                                         { name: :name_en, classes: 'max-w-[240px]', input_type: :text_field },
                                         { name: :status, input_type: :status_select, model: Group },
@@ -57,7 +58,7 @@
                                record: group,
                                index: index,
                                columns: [{ type: :text, name: :id, classes: 'font-medium text-gray-900' },
-                                         { type: :link, name: :supergroup_name_ka, url_method: -> (**params){ admin_groups_path }, url_params: { supergroup_id: group.supergroup_id }, classes: "max-w-[240px] overflow-hidden text-gray-500" },
+                                         { type: :link, name: :supergroup_name_ka, url_method: -> (**params){ admin_groups_path(**params) }, url_params: { supergroup_id: group.supergroup_id }, classes: "max-w-[240px] overflow-hidden text-gray-500" },
                                          { type: :link, name: :name_ka, url_method: -> (**params){ admin_collections_path(**params) }, url_params: { group_id: group.id }, classes: "max-w-[240px] overflow-hidden text-gray-500" },
                                          { type: :link, name: :name_en, url_method: -> (**params){ admin_collections_path(**params) }, url_params: { group_id: group.id }, classes: "max-w-[240px] overflow-hidden text-gray-500" },
                                          { type: :text, name: :status, classes: "text-gray-500" },
