--- a/app/views/admin/shared/table/_filter.html.erb
+++ b/app/views/admin/shared/table/_filter.html.erb
@@ -1,16 +1,20 @@
 <tr>
   <% columns.each_with_index do |column, index| %>
-    <th scope="col" class="<%= table_filter_cell_classes(column, index, columns.size) %>">
-      <% if column[:input_type] == :submit %>
-        <button type="submit" class="w-full inline-flex block rounded-md bg-skyblue-500 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-skyblue-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-skyblue-500">
-          <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
-          </svg>
-          ძიება
-        </button>
-      <% else %>
-        <%= table_filter_input(form, column) %>
-      <% end %>
-    </th>
+    <% if column[:input_type] == :hidden %>
+      <%= form.hidden_field column[:name], name: column[:name] %>
+    <% else %>
+      <th scope="col" class="<%= table_filter_cell_classes(column, index, columns.size) %>">
+        <% if column[:input_type] == :submit %>
+          <button type="submit" class="w-full inline-flex block rounded-md bg-skyblue-500 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-skyblue-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-skyblue-500">
+            <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+            </svg>
+            ძიება
+          </button>
+        <% else %>
+          <%= table_filter_input(form, column) %>
+        <% end %>
+      </th>
+    <% end %>
   <% end %>
 </tr>
