--- a/app/views/admin/supergroups/index.html.erb
+++ b/app/views/admin/supergroups/index.html.erb
@@ -1,10 +1,7 @@
-<header>
-  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-    <h1 class="text-3xl font-bold leading-tight tracking-tight text-gray-900">ქვეკორპუსები</h1>
-  </div>
-</header>
+<%= render 'admin/shared/heading', name: 'ქვეკორპუსები' %>
+
 <main>
-  <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
+  <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <% crumbs = [] %>
     <% crumbs << { name: 'ქვეკორპუსები', url: admin_supergroups_path } %>
 
@@ -12,10 +9,8 @@
 
     <%= render 'admin/shared/new_button', name: 'ახალი ქვეკორპუსის დამატება', url: new_admin_supergroup_path %>
 
-    <div class="mt-8 px-4 sm:px-6 lg:px-8">
-
-      <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {} %>
-
+    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {} %>
+    <div class="px-4 sm:px-6 lg:px-8">
       <div class="flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
           <div class="inline-block min-w-full py-2 align-middle">
@@ -67,7 +62,7 @@
           </div>
         </div>
       </div>
-      <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {} %>
     </div>
+    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {} %>
   </div>
 </main>
