Add logo placeholder and title

--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -9,6 +9,22 @@
 
 <nav class="border-b border-gray-200 bg-white">
   <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8">
+    <div class="flex h-24 justify-between">
+      <div class="flex">
+        <div class="-mr-2 ml-6 mt-4">
+          <div class="p-4 inline-flex items-center rounded-md ring-2 ring-mountbatten-500 ring-offset-2">
+            <svg class="block h-12 w-12" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+
+            </svg>
+          </div>
+          <div class="mx-auto h-full inline-block align-middle items-center px-4 sm:px-6 lg:px-8">
+            <h1 class="text-3xl font-bold leading-tight tracking-tight text-gray-900">ინგლისურ-ქართული პარალელური კორპუსი</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8">
     <div class="flex h-16 justify-between">
       <div class="flex">
         <div class="hidden sm:-my-px sm:flex sm:space-x-8">
