--- a/app/views/admin/supergroups/edit.html.erb
+++ b/app/views/admin/supergroups/edit.html.erb
@@ -1,7 +1,15 @@
-<%= render partial: "admin/shared/header" %>
+<%= render 'admin/shared/heading', name: 'ქვეკორპუსის რედაქტირება' %>
 
-<h1>
-  <%= link_to 'ქვეკორპუსები', admin_supergroups_path %> > ქვეკორპუსის რედაქტირება
-</h1>
+<main>
+  <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
 
-<%= render partial: "admin/supergroups/shared/form" %>
+    <% crumbs = [] %>
+    <% crumbs << { name: 'ქვეკორპუსები', url: admin_supergroups_path } %>
+    <% crumbs << { name: @supergroup.name_ka, url: admin_groups_path(supergroup_id: @supergroup.id) } %>
+    <% crumbs << { name: 'რედაქტირება', url: edit_admin_supergroup_path(supergroup_id: @supergroup.id) } %>
+
+    <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
+
+    <%= render partial: "admin/supergroups/shared/form" %>
+  </div>
+<main>
