--- a/app/views/admin/supergroups/shared/_form.html.erb
+++ b/app/views/admin/supergroups/shared/_form.html.erb
@@ -1,12 +1,108 @@
-<%= form_with model: [:admin, @supergroup] do |form| %>
-  <%= form.label :name_ka, 'სახელი (ka)' %>
-  <%= form.text_field :name_ka %>
-  <%= form.label :name_en, 'სახელი (en)' %>
-  <%= form.text_field :name_en %>
-  <%= form.label :comment, 'კომენტარი' %>
-  <%= form.text_area :comment, size: "60x10" %>
-  <%= form.label :status, 'სტატუსი' %>
-  <%= form.select :status, Supergroup.statuses.keys.map { |status| [status.titleize, status] } %>
-  <%= link_to 'უკან დაბრუნება', admin_supergroups_path %>
-  <%= form.submit %>
-<% end %>
+<!-- <%= form_with model: [:admin, @supergroup] do |form| %> -->
+  <!-- <%= form.label :name_ka, 'სახელი (ka)' %> -->
+  <!-- <%= form.text_field :name_ka %> -->
+  <!-- <%= form.label :name_en, 'სახელი (en)' %> -->
+  <!-- <%= form.text_field :name_en %> -->
+  <!-- <%= form.label :comment, 'კომენტარი' %> -->
+  <!-- <%= form.text_area :comment, size: "60x10" %> -->
+  <!-- <%= form.label :status, 'სტატუსი' %> -->
+  <!-- <%= form.select :status, Supergroup.statuses.keys.map { |status| [status.titleize, status] } %> -->
+  <!-- <%= link_to 'უკან დაბრუნება', admin_supergroups_path %> -->
+  <!-- <%= form.submit %> -->
+<!-- <% end %> -->
+
+
+<!--
+  This example requires some changes to your config:
+
+
+  // tailwind.config.js
+  module.exports = {
+    // ...
+    plugins: [
+      // ...
+      require('@tailwindcss/forms'),
+    ],
+  }
+
+-->
+<form>
+  <div class="flex justify-stretch grid grid-flow-col max-w-3xl">
+    <div class="mt-8 bg-mountbatten-100 px-4 rounded-md ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
+      <div>
+
+        <div class="space-y-8 border-gray-900/10 sm:space-y-0 sm:divide-y sm:divide-gray-900/10 sm:pb-0">
+          <div class="sm:grid sm:grid-cols-3 sm:items-start sm:divide-x sm:gap-4 sm:py-6">
+            <label for="first-name" class="block text-sm font-medium leading-6 text-gray-900 sm:py-1.5">First name</label>
+            <div class="mt-2 sm:col-span-2 sm:mt-0">
+            </div>
+          </div>
+
+          <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:py-6">
+            <label for="last-name" class="block text-sm font-medium leading-6 text-gray-900 sm:py-1.5">Last name</label>
+            <div class="mt-2 sm:col-span-2 sm:mt-0">
+            </div>
+          </div>
+
+          <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:py-6">
+            <label for="about" class="block text-sm font-medium leading-6 text-gray-900 sm:pt-3 sm:pb-12">About</label>
+            <div class="mt-2 sm:col-span-2 sm:mt-0">
+            </div>
+          </div>
+
+          <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:py-6">
+            <label for="country" class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5">Country</label>
+            <div class="mt-2 sm:col-span-2 sm:mt-0">
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="mt-8 bg-gray-100 px-4 rounded-md ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
+      <div>
+
+        <div class="space-y-8 border-gray-900/10 sm:space-y-0 sm:divide-y sm:divide-gray-900/10 sm:pb-0">
+          <div class="sm:grid sm:grid-cols-3 sm:items-start sm:divide-x sm:gap-4 sm:py-6">
+
+            <div class="mt-2 sm:col-span-3 sm:mt-0">
+              <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
+            </div>
+          </div>
+
+          <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:py-6">
+
+            <div class="mt-2 sm:col-span-3 sm:mt-0">
+              <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
+            </div>
+          </div>
+
+          <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:py-6">
+
+            <div class="mt-2 sm:col-span-3 sm:mt-0">
+              <textarea id="about" name="about" rows="3" class="block w-full max-w-2xl rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+            </div>
+          </div>
+
+          <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:py-6">
+
+            <div class="mt-2 sm:col-span-3 sm:mt-0">
+              <select id="country" name="country" autocomplete="country-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
+                <option>United States</option>
+                <option>Canada</option>
+                <option>Mexico</option>
+              </select>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-6 flex justify-stretch grid grid-flow-col gap-x-6 max-w-3xl">
+    <button type="button" class="inline-flex justify-center rounded-md bg-gray-200 ring-2 ring-gray-500 px-3 py-2 text-sm font-semibold text-gray-700 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-200">უარყოფა</button>
+    <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
+    <button type="button" class="inline-flex justify-center rounded-md bg-gray-500 ring-2 ring-gray-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-gray-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-500">წაშლა</button>
+  </div>
+</form>
