--- a/app/views/admin/groups/edit.html.erb
+++ b/app/views/admin/groups/edit.html.erb
@@ -1,8 +1,21 @@
-<%= render partial: "admin/shared/header" %>
+<%= render 'admin/shared/heading', name: 'ჯგუფის რედაქტირება' %>
 
-<h1>
-  <%= link_to @group.supergroup.name_ka, admin_groups_path(supergroup_id: @group.supergroup.id) %> >
-  <%= link_to 'ჯგუფები', admin_groups_path(supergroup_id: @group.supergroup&.id) %> > ჯგუფის რედაქტირება
-</h1>
+<main>
+  <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
 
-<%= render partial: "admin/groups/shared/form" %>
+    <% crumbs = [] %>
+    <% crumbs << { name: 'ქვეკორპუსები', url: admin_supergroups_path } %>
+    <% crumbs << { name: 'ახალი ქვეკორპუსის დამატება', url: new_admin_supergroup_path() } %>
+
+    <% crumbs = [] %>
+    <% crumbs << { name: 'ქვეკორპუსები', url: admin_supergroups_path } %>
+    <% crumbs << { name: @group.supergroup.name_ka, url: admin_groups_path(supergroup_id: @group.supergroup.id) } %>
+    <% crumbs << { name: 'ჯგუფები', url: admin_groups_path(supergroup_id: @group.supergroup.id) } %>
+    <% crumbs << { name: @group.name_ka, url: admin_collections_path(group_id: @group.id) } %>
+    <% crumbs << { name: 'რედაქტირება', url: edit_admin_group_path(group_id: @group.id) } %>
+
+    <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
+
+    <%= render 'admin/groups/shared/form', url: admin_group_path, method: :put %>
+  </div>
+<main>
