--- a/app/views/admin/supergroups/shared/_form.html.erb
+++ b/app/views/admin/supergroups/shared/_form.html.erb
@@ -36,7 +36,7 @@
     <div class="mt-8 bg-gray-100 px-3 rounded-tr-md col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
         <div class="mt-2 sm:mt-0 w-full">
-          <%= form.text_field :name_ka, name: :name_ka, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+          <%= form.text_field :name_ka, name: :name_ka, required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
         <div class="mt-2 sm:mt-0 w-full">
-          <%= form.text_field :name_en, name: :name_en, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+          <%= form.text_field :name_en, name: :name_en, required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
         </div>
       </div>
     </div>
