--- a/app/views/admin/supergroups/new.html.erb
+++ b/app/views/admin/supergroups/new.html.erb
@@ -1,4 +1,4 @@
-<%= render 'admin/shared/heading', name: 'ქვეკორპუსის რედაქტირება' %>
+<%= render 'admin/shared/heading', name: 'ქვეკორპუსის დამატება' %>
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
